Whole bunch of sexy updates

--- a/authApp/templates/authApp/base.html
+++ b/authApp/templates/authApp/base.html
@@ -1,36 +1,62 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
 
 <head>
-    <title>auth</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <title>
+        Parametricall
+    </title>
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    {% block head %}
+    {% endblock head %}
 </head>
 
 <body>
-<header>
-    <nav>
-        <div class="nav-wrapper">
-            <a href="/" class="brand-logo center">auth</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'auth:profile' user.id %}">{{ user.username }}</a></li>
-                    <li><a href="{% url 'auth:create' %}">Create</a></li>
-                    <li><a href="{% url 'auth:users' %}">Table</a></li>
-                    <li><a href="{% url 'auth:logout' %}">Logout</a></li>
-                {% else %}
-                    <li><a href="{% url 'auth:login' %}">Login</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
-</header>
 
-{% block content %}
-{% endblock content %}
+    {% block body_header %}
+    {% endblock body_header %}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+    {% block body %}
+    {% endblock body %}
+
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+{% block scripts %}
+{% endblock scripts %}
 
 </body>
 </html>
+
+
+{#<body>#}
+{#<header>#}
+{#    <nav>#}
+{#        <div class="nav-wrapper">#}
+{#            <a href="/" class="brand-logo center">auth</a>#}
+{#            <ul id="nav-mobile" class="right hide-on-med-and-down">#}
+{#                {% if user.is_authenticated %}#}
+{#                    <li><a href="{% url 'auth:profile' user.id %}">{{ user.username }}</a></li>#}
+{#                    <li><a href="{% url 'auth:create' %}">Create</a></li>#}
+{#                    <li><a href="{% url 'auth:users' %}">Table</a></li>#}
+{#                    <li><a href="{% url 'auth:logout' %}">Logout</a></li>#}
+{#                {% else %}#}
+{#                    <li><a href="{% url 'auth:login' %}">Login</a></li>#}
+{#                {% endif %}#}
+{#            </ul>#}
+{#        </div>#}
+{#    </nav>#}
+{#</header>#}
+{##}
+{#{% block content %}#}
+{#{% endblock content %}#}
+{##}
+{#<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>#}
+{##}
+{#</body>#}
+{#</html>#}
