--- a/authApp/templates/authApp/profile.html
+++ b/authApp/templates/authApp/profile.html
@@ -1,22 +1,22 @@
-{% extends 'authApp/base.html' %}
+{% extends 'authApp/base_with_header.html' %}
 
-{% block content%}
+{% block body %}
     <div class="row"></div>
-<div class="container">
-    <form method="post" class="col s12">
-      {% csrf_token %}
+    <div class="container">
+        <form method="post" class="col s12">
+            {% csrf_token %}
 
-      {% for field in form %}
-          <div class="row">
-              <div class="input-field col s12">
-                  {{ field }}
-                  {{ field.label_tag }}
-              </div>
-          </div>
-      {% endfor %}
+            {% for field in form %}
+                <div class="row">
+                    <div class="input-field col s12">
+                        {{ field }}
+                        {{ field.label_tag }}
+                    </div>
+                </div>
+            {% endfor %}
 
-      <button type="submit">Save changes</button>
-    </form>
-</div>
+            <button type="submit">Save changes</button>
+        </form>
+    </div>
 
-{% endblock content %}
+{% endblock body %}
