--- a/authApp/templates/authApp/users.html
+++ b/authApp/templates/authApp/users.html
@@ -1,36 +1,33 @@
-{% extends 'authApp/base.html' %}
+{% extends extended_template %}
 
-{% block content %}
+{% block body %}
     <div class="row"></div>
     <div class="container">
 
-    <form method="POST" action="">
-    {% csrf_token %}
-    {{ formset.management_form }}
-
-{#    <table class="striped centered highlight">#}
-{#        <thead>#}
-{#        <tr>#}
-{#            <th>Username</th>#}
-{#            <th>Email</th>#}
-{#        </tr>#}
-{#        </thead>#}
-{#        <tbodY>#}
-        {{ formset }}
-{#            {% for form in formset %}#}
-{#            <tr>#}
-{#            {{ form.errors }}#}
-{#                {% for field in form %}#}
-{#                    <td>#}
-{#                        {{ field }}#}
-{#                    </td>#}
-{#                {% endfor %}#}
-{#            </tr>#}
-
-{#                {% endfor %}#}
-{#        </tbodY>#}
-{#    </table>#}
-    </form>
+        <form method="POST" action="">
+            {% csrf_token %}
+            {{ formset.management_form }}
+            <table class="striped centered highlight">
+                <thead>
+                <tr>
+                    <th>Username</th>
+                    <th>Email</th>
+                </tr>
+                </thead>
+                <tbodY>
+                {% for form in formset %}
+                    <tr>
+                        {{ form.errors }}
+                        {% for field in form %}
+                            <td>
+                                {{ field }}
+                            </td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+                </tbodY>
+            </table>
+        </form>
     </div>
 
-{% endblock content %}
+{% endblock body %}
