--- a/templates/default/base_with_header.html
+++ b/templates/default/base_with_header.html
@@ -1,12 +1,13 @@
-{% extends 'authApp/base.html' %}
+{% extends 'default/base.html' %}
 
 {% block body_header %}
     <nav>
         <div class="nav-wrapper">
-            <a href="{% url 'auth:index' %}" class="brand-logo center">Auth</a>
+            <a href="/" class="brand-logo center">Auth</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 {% if user.is_authenticated %}
                     <li><a href="{% url 'auth:detail' %}">{{ user.username }}</a></li>
+                    <li><a href="{% url 'auth:users' %}">Users</a> </li>
                     <li><a href="{% url 'auth:logout' %}">Logout</a></li>
                 {% else %}
                     <li><a href="{% url 'auth:login' %}">Login</a></li>
