--- a/templates/default/base.html
+++ b/templates/default/base.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
+{% block authAppHeader %}
 
 <head>
     <title>
@@ -31,6 +32,7 @@
 {% endblock scripts %}
 
 </body>
+{% endblock authAppHeader %}
 </html>
 
 
